--- a/sale.css
+++ b/sale.css
@@ -104,12 +104,11 @@ cursor: pointer;
 
 h1 {
     font-size: 32px;
-    margin-bottom: 10px;
+    margin-top: 30px;
+    margin-bottom: 70px;
+    margin-left: 560px;
   }
   
-  header p {
-    font-size: 16px;
-  }
   
   .produtos {
     display: grid;
@@ -119,7 +118,7 @@ h1 {
   }
   
   .produto {
-    background-color: #2c2c2c;
+    background-color: #DAA29A;
     padding: 20px;
     border-radius: 10px;
     text-align: center;
@@ -149,7 +148,7 @@ h1 {
   }
   
   .preco-novo {
-    color: #f9d342;
+    color: #572C28;
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 15px;
@@ -157,8 +156,8 @@ h1 {
   
   button {
     padding: 10px 20px;
-    background-color: #f9d342;
-    color: #000;
+    background-color: #572C28;
+    color: #DAA29A;
     border: none;
     border-radius: 6px;
     font-weight: bold;
@@ -167,6 +166,7 @@ h1 {
   }
   
   button:hover {
-    background-color: #ffe066;
+    background-color: #7d1609;
   }
   
+  #espaco {margin-top: 100px;}
