--- a/style.css
+++ b/style.css
@@ -100,3 +100,9 @@ cursor: pointer;
     margin-right: 300px;
     
 } 
+
+#descricao {font-size: 100px;
+color: #7d1609;
+margin-left: 300px;
+margin-top: 45px;
+}
